added new js and css files to try and get the start button to work

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Elementary-Quiz</title>
 </head>
+
 <body>
     <div class="container" id="toDa">
         <div class="row">
@@ -16,16 +18,15 @@
                 <div id="tally">0</div>
                 <div id="hourglass">45</div>
             </div>
-            <--! originally questOps -->
             <div id="challOpt" class="row reveal"></div>
-            <div id="challengesDiv" class="col s12 m6">Challenges</div>
-            <div id="choicesDiv" class="col s12 m6">Choices</div>
-            <a id="commence" class="waves-effect waves-light btn">Commence!</a>
+            <div id="questionsDiv" class="col s12 m6">Challenges</div>
+            <div id="answersDiv" class="col s12 m6">Choices</div>
+            <button id="commence-btn" class="waves-effect waves-light btn">Commence!</button>
         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>'./index.js'
-    </script>
+    <script>'/index.js'</script>
 </body>
+
 </html>
