Adjusting for choices and challenges to render

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="challenges" class="hidden">
             <h1 id="challenges-header"></h1>
             <h3 id="challenge-div"></h3>
-            <div id="choices-div" class="col s12 m6"></div>
+            <div id="choices" class="choices"></div>
          </div>
         <!-- end challenge section -->
         <div id="end-challenge" class="hidden">
