--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                 You're Challenge Score is: 
                 <span id="challenge-tally"></span>
             </p>
+            <input type="text" id="user-initials"></input>
             <button id="submit-btn" class="waves-effect waves-light btn">Submit</button>
         </div>
+        <div id="results" class="results hidden"></div>
         </div>
     </div>
 
