Added feedback to html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="tally">Tally: <span id="tally">0</span></div>
     <div class="hourglass">Hour Glass: <span id="hourglass">0</span></div>
+    <div class="feedback">Feedback: <span id="feedback"></span></div>
 
     <div class="container" id="todo">
          <!-- start challenge section -->
