--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
                 You're Challenge Score is: 
                 <span id="challenge-tally"></span>
             </p>
-            <input type="text" id="user-initials"></input>
+            <input type="text" id="user-initials" placeholder="Please enter your initials here!"></input>
             <button id="submit-btn" class="waves-effect waves-light btn">Submit</button>
+            <p>~OR~</p>
+            <button id="commence-btn" class="waves-effect waves-light btn">Try Again!</button>
         </div>
+        
         <div id="results" class="results hidden"></div>
         </div>
     </div>
