Corrected most everything up to Highscore(tally)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="feedback">Feedback: <span id="feedback"></span></div>
 
     <div class="container" id="todo">
-         <!-- start challenge section -->
+        <!-- start challenge section -->
         <div id="commence-challenge" class="commence">
             <h1>~Today's Quiz~</h1>
             <p>A easy test to guage your coding knowledge</p>
@@ -27,22 +27,23 @@
             <h1 id="challenges-header"></h1>
             <h3 id="challenge-div"></h3>
             <div id="choices" class="choices"></div>
-         </div>
+        </div>
         <!-- end challenge section -->
         <div id="end-challenge" class="hidden">
             <h1>Challenge Complete!</h1>
             <p>
-                You're Challenge Score is: 
+                You're Challenge Score is:
                 <span id="challenge-tally"></span>
             </p>
             <input type="text" id="user-initials" placeholder="Please enter your initials here!"></input>
             <button id="submit-btn" class="waves-effect waves-light btn">Submit</button>
             <p>~OR~</p>
-            <button id="commence-btn" class="waves-effect waves-light btn">Try Again!</button>
+            <a href="./index.html"><button id="commence-btn" class="waves-effect waves-light btn">Try
+                    Again!</button></a>
         </div>
-        
+
         <div id="results" class="results hidden"></div>
-        </div>
+    </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
