--- a/results.html
+++ b/results.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results</title>
 </head>
+
 <body>
     <h1>Your results are!</h1>
-    <div id="final-tally"></div>
+    <ol id="final-tally">
+        <!-- result display here -->
+    </ol>
     <!-- restart challenge -->
-    <button>Restart Challenge</button>
-    <script src="./js/scores.js"></script>
+    <a href="./index.html"><button>Restart Challenge</button></a>
+    <script src="./js/results.js"></script>
 </body>
+
 </html>
